# rec3

./: README.md  pyproject.toml  pyrec.py  setup.py
tests/: test_imports.py
